make cue prettier
